--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <title>Portifólio Róbison Nunes</title>
 </head>
 <body>
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="portdolio">
+
+        </section>
+
+
+    </main>
     
 </body>
 </html>
