--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <style>
-        * {
+
+        * { 
             margin: 0px;
             padding: 0px;
         }
@@ -14,8 +15,9 @@
         body {
             width: 100vw;
             height: 100vh;
-            background-color: black url ('imagens/tela-home.jpg');
-        }
+
+            background: black url(imagens/tela-home.jpg) no-repeat top center;
+          }
 
     </style>
 </head>
