--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela"  frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela"  frameborder="0">
+                Seu navegador não é compatível com isso.
+            </iframe>
 
         </section>
 
-        <section id="portdolio">
+        <section id="portfolio">
+            <a href="#"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="https://robisonnunes08.github.io/desafio-projeto-cordel/" target="tela"><img src="imagens/p-abelha.png" alt="cordel"></a>
+            <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" target="tela"><img src="imagens/p-bandeira-rs.jpg" alt="hino rs"></a>
+            <a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html" target="tela"> <img src="imagens/p-tabelas.png" alt="tabelas"></a>
+            <a href="https://robisonnunes08.github.io/estudos/ex012a/index.html" target="tela"><img src="imagens/p-homem-de-ferro.png" alt="iron man"></a>
+            <a href="https://robisonnunes08.github.io/desafio-site-android/" target="tela"><img src="imagens/bugdroid1.png" alt="bugdroid"></a>
 
         </section>
 
