--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <a href="https://robisonnunes08.github.io/desafio-projeto-cordel/" target="tela"><img src="imagens/p-abelha.png" alt="cordel"></a>
             <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" target="tela"><img src="imagens/p-bandeira-rs.jpg" alt="hino rs"></a>
             <a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html" target="tela"> <img src="imagens/p-tabelas.png" alt="tabelas"></a>
-            <a href="https://robisonnunes08.github.io/estudos/ex012a/index.html" target="tela"><img src="imagens/p-homem-de-ferro.png" alt="iron man"></a>
-            <a href="https://robisonnunes08.github.io/desafio-site-android/" target="tela"><img src="imagens/bugdroid1.png" alt="bugdroid"></a>
+            <a href="https://robisonnunes08.github.io/estudos/ex012a/index.html" target="tela"><img src="imagens/p-homem-de-ferro2.png" alt="iron man"></a>
+            <a href="https://robisonnunes08.github.io/desafio-site-android/" target="tela"><img src="imagens/p-bugdroid.png" alt="bugdroid"></a>
 
         </section>
 
