--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
 
         <section id="portfolio">
-            <a href="https://robisonnunes08.github.io/portfolio/" target="tela"><img src="imagens/logo-home.jpg"  alt="home"></a> <br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg"  alt="home"></a> <br>
             <a href="https://robisonnunes08.github.io/desafio-projeto-cordel/" target="tela"><img src="imagens/p-abelha.png" alt="cordel"></a> <br>
             <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" target="tela"><img src="imagens/p-bandeira-rs.jpg" alt="hino rs"></a> <br>
             <a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html" target="tela"> <img src="imagens/p-tabelas.png" alt="tabelas"></a> <br>
