--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,15 +12,15 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela"  frameborder="0">
+            <iframe src="portgeral/home.html" name="tela" id="tela"  frameborder="0">
                 Seu navegador não é compatível com isso.
             </iframe>
 
         </section>
 
         <section id="portfolio">
-            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg"  alt="home"></a> <br>
-            <a href="port001.html" target="tela"><img src="imagens/p-abelha.png" alt="cordel"></a> <br>
+            <a href="portgeral/home.html" target="tela"><img src="imagens/logo-home.jpg"  alt="home"></a> <br>
+            <a href="portgeral/port001.html" target="tela"><img src="imagens/p-abelha.png" alt="cordel"></a> <br>
             <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" target="tela"><img src="imagens/p-bandeira-rs.jpg" alt="hino rs"></a> <br>
             <a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html" target="tela"> <img src="imagens/p-tabelas.png" alt="tabelas"></a> <br>
             <a href="https://robisonnunes08.github.io/estudos/ex012a/index.html" target="tela"><img src="imagens/p-homem-de-ferro2.png" alt="iron man"></a> <br>
