--- a/portgeral/port001.html
+++ b/portgeral/port001.html
@@ -100,12 +100,12 @@ section.imagem > p {
 }
 
 section#img01 {
-    background-image: url(imagens-cordel/background001.jpg);
+    background-image: url('img-imagens-cordel/background001.jpg');
    
 }
 
 section#img02 {
-    background-image: url(imagens-cordel/background002.jpg);
+    background-image: url(img-imagens-cordel/background002.jpg);
 }
 
 footer {
