--- a/portgeral/port002.html
+++ b/portgeral/port002.html
@@ -43,7 +43,7 @@ ul {
 header  {
     border-radius: 10px;
    
-    background-image: url(../imagens/Flag_map_of_Rio_Grande_Do_Sul-2.png);
+    background-image: url(img-hino-rio-grande-do-sul/Flag_map_of_Rio_Grande_Do_Sul-2.png);
     background-repeat: no-repeat;
     background-position: right center;
     margin-bottom: 10px;
@@ -74,7 +74,7 @@ p {
 .img01 {
     display: inline-block;
     width: 750px;
-    background-image: url(../imagens/fecosul.jpg);
+    background-image: url(img-hino-rio-grande-do-sul/fecosul.jpg);
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 100vh;
@@ -86,7 +86,7 @@ p {
 .img02 {
     display: inline-block;
     width: 750px;
-    background-image: url(../imagens/Rio-Grande-do-Sul-800x533.jpg);
+    background-image: url(img-hino-rio-grande-do-sul/Rio-Grande-do-Sul-800x533.jpg);
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 100vh;
