--- a/portgeral/port005.html
+++ b/portgeral/port005.html
@@ -42,7 +42,7 @@
             }
 
             body {
-                background-color: chocolate
+                background-color: var(--cor0);
                 font-family: var(--fonte-padrao);
             }
 
