--- a/portgeral/port001.html
+++ b/portgeral/port001.html
@@ -105,7 +105,7 @@ section#img01 {
 }
 
 section#img02 {
-    background-image: url(img-imagens-cordel/background002.jpg);
+    background-image: url('img-imagens-cordel/background002.jpg');
 }
 
 footer {
