--- a/portgeral/port002.html
+++ b/portgeral/port002.html
@@ -22,7 +22,7 @@
 }
 
 html, body {
-
+    font-size: 3vw;
     background-image: linear-gradient(to bottom, #008D3D, #0F7039);
     font-family: var(--fonte1);
     min-height: 92vh;
