--- a/portgeral/port005.html
+++ b/portgeral/port005.html
@@ -7,217 +7,235 @@
     <title>História Bug-droid</title>
 
     <style>
-           @font-face {
-           font-family:'bebas neue';
-           src: url('../fonts/Bebas-Regular.otf') format('opentype');
-           font-weight: normal;
-            }
+          @font-face {
+    font-family:'bebas neue';
+    src: url('../fonts/Bebas-Regular.otf') format('opentype');
+    font-weight: normal;
+}
 
-            @font-face {
-                font-family: 'android';
-                src: url('../fonts/android/IDroid.otf') format('opentype');
-                font-weight: normal;
-            }
+@font-face {
+    font-family:'bebas neue';
+    src: url('../fonts/Bebas-Regular.otf') format('opentype');
+    font-weight: normal;
+}
 
-            :root {
-                --cor0: #c5ebd6;
-                --cor1: #83e1ad;
-                --cor2: #3ddc84;
-                --cor3: #2fa866;
-                --cor4: #1a5c37;
-                --cor5: #063d1e;
+@font-face {
+    font-family: 'android';
+      src: url('../fonts/android/IDroid.otf') format('opentype');
+    font-weight: normal;
+}
 
-                --fonte-padrao: arial, verdana, helvetica, sans-serif;
-                --fonte-destaque: 'bebas neue', cursive;
-                --fonte-android: 'android', cursive;
-            }
+:root {
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
 
-            * {
-                margin: 0px;
-                padding: 0px;
-            }
+    --fonte-padrao: arial, verdana, helvetica, sans-serif;
+    --fonte-destaque: 'bebas neue', cursive;
+    --fonte-android: 'android', cursive;
+}
 
-            a.externo::after {
-                content: '\00a0\1F517';
-            }
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
-            body {
-                background-color: var(--cor0);
-                font-family: var(--fonte-padrao);
-            }
+a.externo::after {
+    content: '\00a0\1F517';
+}
 
-            header {
-                background-image: linear-gradient(to bottom, #2fa866, #063d1e);
-                min-height: 150px;
-                text-align: center;
-                padding-top: 35px;
-            }
+body {
+    width: 200px;
+    font-size: 4vw;
+    margin: auto;
+    background-color: white;
+    font-family: var(--fonte-padrao);
+}
 
-            header > h1 {
-                color: white;
-                font-family: var(--fonte-destaque);
-                font-size: 3em;
-                font-weight: normal;
-                margin-bottom: 20px;
-                text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
-            }
+header {
+    background-image: linear-gradient(to bottom, #2fa866, #063d1e);
+    min-height: 150px;
+    text-align: center;
+    padding-top: 35px;
+}
 
-            header > p {
-                font-family: var(--fonte-padrao);
-                font-size: 1.2em;
-                margin-bottom: 30px;
-                color: white;
-                max-width: 600px;
-                padding-right: 10px;
-                padding-left: 10px;
-                margin: auto;
-                text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
-            }
+header > h1 {
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-size: 7vw;
+    font-weight: normal;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
+}
 
-            nav {
-                background-color: var(--cor5);
-                padding: 10px;
-            }
+header > p {
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    margin-bottom: 30px;
+    color: white;
+    max-width: 600px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
+}
 
-            nav > a {
-                border-radius: 5px;
-                transition-duration: 0.3s;
-                padding: 10px;
-                color: var(--cor1);
-                text-decoration: none;
-                font-weight: bold;
-            }
+nav {
+    background-color: var(--cor5);
+    padding: 10px;
+}
 
-            nav > a:hover {
-                background-color: var(--cor3);
-                color: var(--cor5);
-            }
+nav > a {
+    border-radius: 5px;
+    transition-duration: 0.3s;
+    padding: 10px;
+    color: var(--cor1);
+    text-decoration: none;
+    font-weight: bold;
+}
 
-            main {
-                background-color: white;
-                min-width: 280px;
-                max-width: 1000px;
-                margin: auto;
-                margin-bottom: 30px;
-                padding: 20px;
-                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
-                border-bottom-left-radius: 10px; ;
-                border-bottom-right-radius: 10px;
+nav > a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
+   }
 
-            }
+main {
+    width: 62%;
+    background-color: white;
+    min-width: 280px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+    border-bottom-left-radius: 10px; ;
+    border-bottom-right-radius: 10px;
 
-            main p {
-                margin: 15px 0px;
-                text-align: justify;
-                text-indent: 25px;
-                line-height: 1.3em;
-            }
+}
 
-            main strong {
-                color: var(--cor4);
-                font-weight: bold;
-            }
+main p {
+    width: 62%;
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 25px;
+    line-height: 1.3em;
+}
 
-            main a {
-                text-decoration: underline;
-                font-weight: bold;
-                color: var(--cor5);
-                background-color: var(--cor1);
-                padding: 2px 6px;
-            }
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
 
-            main a:hover {
-                background-color: var(--cor0);
-            }
+main a {
+    text-decoration: underline;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+}
 
-            main img {
-                width: 100%;
-            }
+main a:hover {
+    background-color: var(--cor0);
+}
 
-            main img.pequena {
-                display: block;
-                margin: auto;
-                max-width: 350px;
-            }
+main img {
+    width: 65%;
+}
 
-            main h1 {
-                font-size: 1.8em;
-                font-weight: normal;
-                color: var(--cor5);
-                font-family: var(--fonte-android);
-            } 
+main img.pequena {
+    display: block;
+    margin: auto;
+    max-width: 3000px;
+}
 
-            main h2 {
-                font-weight: normal;
-                font-family: var(--fonte-android);
-                color: var(--cor4);
-                font-size: 1.3em;
-                background-image: linear-gradient(to right, var(--cor2), transparent );
-                text-indent: 15px;
+main h1 {
+    width: 65%;
+    font-size: 1.8em;
+    font-weight: normal;
+    color: var(--cor5);
+    font-family: var(--fonte-android);
+} 
 
-            }
+main h2 {
+    width: 62%;
+    font-weight: normal;
+    font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor2), transparent );
+    text-indent: 15px;
 
-            div.video {
-                background-color: var(--cor5);
-                margin: 0px -20px 30px -20px;
-                padding: 20px;
-                padding-bottom: 59%;
-                position: relative;
-            }
+}
 
-            div.video > iframe {
-                position: absolute;
-                top: 5%;
-                left: 5%;
-                width: 90%;
-                height: 90%;
-            }
+div.video {
+    width: 62%;
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 59%;
+    position: relative;
+}
 
-            aside {
-                background-color: var(--cor1);
-                padding: 10px;
-                border-radius: 10px; 
-                box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.233);
-            }
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 62%;
+    height: 90%;
+}
 
-            aside h3 {
-                background-color: var(--cor4);
-                color: white;
-                padding: 5px;
-                margin: -10px -10px 0px -10px;
-                border-top-left-radius: 8px;
-                border-top-right-radius: 8px;
-            }
+aside {
+    width: 62%;
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px; 
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.233);
+}
 
-            aside > ul {
-                list-style-position: inside;
-                columns: 2;
-                list-style-type: "\2714\00a0\00a0";
-            }
+aside h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -10px -10px 0px -10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
 
-            footer {
-                background-color: var(--cor5);
-                color: white;
-                text-align: center;
-                font-size: 0.8em;
-                padding: 5px;
-            }
+aside > ul {
+    list-style-position: inside;
+    columns: 2;
+    list-style-type: "\2714\00a0\00a0";
+}
 
-            footer a {
-                color: white;
-                font-weight: bolder;
-                text-decoration: none;
-            }
+footer {
+    width: 62%;
+    background-color: var(--cor5);
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
 
-            footer a:hover {
-                text-decoration: underline;
-                background-color: var(--cor1);
-            }
+footer a {
+    width: 62%;
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    width: 62%;
+    text-decoration: underline;
+    background-color: var(--cor1);
+}
     </style>
 </head>
 <body>
     <header>
-        <h1>CURIOSIDADES DE TECNOLOGIA</h1>
+        <h1>CURIOSIDADES DE TECNOLOGIA</h1> 
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
     </header>      
       <nav>
