--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="portgeral/home.html" target="tela"><img src="imagens/logo-home.jpg"  alt="home"></a> <br>
             <a href="portgeral/port001.html" target="tela"><img src="imagens/p-abelha.png" alt="cordel"></a> <br>
             <a href="portgeral/port002.html" target="tela"><img src="imagens/p-bandeira-rs.jpg" alt="hino rs"></a> <br>
-            <a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html" target="tela"> <img src="imagens/p-tabelas.png" alt="tabelas"></a> <br>
+            <a href="portgeral/port003.html" target="tela"> <img src="imagens/p-tabelas.png" alt="tabelas"></a> <br>
             <a href="https://robisonnunes08.github.io/estudos/ex012a/index.html" target="tela"><img src="imagens/p-homem-de-ferro2.png" alt="iron man"></a> <br>
             <a href="portgeral/port005.html" target="tela"><img src="imagens/p-bugdroid.png" alt="bugdroid"></a> 
 
