--- a/portgeral/port005.html
+++ b/portgeral/port005.html
@@ -9,19 +9,19 @@
     <style>
           @font-face {
     font-family:'bebas neue';
-    src: url('../fonts/Bebas-Regular.otf') format('opentype');
+    src: url('font-android/Bebas-Regular.otf') format('opentype');
     font-weight: normal;
 }
 
 @font-face {
     font-family:'bebas neue';
-    src: url('../fonts/Bebas-Regular.otf') format('opentype');
+    src: url('font-android/Bebas-Regular.otf') format('opentype');
     font-weight: normal;
 }
 
 @font-face {
     font-family: 'android';
-      src: url('../fonts/android/IDroid.otf') format('opentype');
+      src: url('font-android/IDroid\ Bold.otf') format('opentype');
     font-weight: normal;
 }
 
