--- a/portgeral/port003.html
+++ b/portgeral/port003.html
@@ -25,7 +25,7 @@
             min-width:50%;
             font-size: 3vw;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: rgb(91, 175, 147);
+            background-color: #938570;
             background-image: url(img.tab003.jpg);
             background-repeat: no-repeat;
             background-position: top center;
