--- a/portgeral/port003.html
+++ b/portgeral/port003.html
@@ -18,14 +18,15 @@
             text-align: center;
             font-size: 2em;
             font-weight: bolder;
-            margin-left: 25px;
+            margin-left: 30px;
+            padding: 50px;
         }
 
         body {
             min-width:50%;
             font-size: 3vw;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #938570;
+            background-color: #ccb28d;
             background-image: url(img.tab003.jpg);
             background-repeat: no-repeat;
             background-position: top center;
@@ -93,12 +94,21 @@
         }
 
         caption {
+            font-size: 10px;
+            background-color: ;
+
+        }
+
+        .titulo {
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 1.5em;
             background-color: #183643;
             color: white;
-            border: 1px solid black;
+            border: 1px solid black;         
+        }
 
+        .espaco {
+            background-color: white;
         }
 
         .rodape {
@@ -120,10 +130,20 @@
 
 </head>
 <body>
-        <a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html">clique para acessar o site</a>
+        
         <table>
-            <caption>População das Unidades Federativas</caption>
+            <caption><a href="https://robisonnunes08.github.io/estudos/ex023/tabela003.html">Clique para acessar o site!!!</a></caption>
             <thead>
+
+                <tr>
+                    <th class="espaco"  colspan="4" scope="col"></th> 
+                    
+                </tr>
+
+                <tr>
+                    <th colspan="4" scope="col"  class="titulo">População das Unidades Federativas</th>
+                </tr>
+
                 <tr>
                     <th class="pos">Pos.</th>
                     <th>Unidade Federativa</th>
