--- a/portgeral/port001.html
+++ b/portgeral/port001.html
@@ -41,7 +41,7 @@ header > h1 {
     padding-top: 50px;   
     font-variant: small-caps;
     font-family: var(--font2);
-    font-size: 10vw;
+    font-size: 28px;
 }
 
 header > p {
@@ -53,6 +53,8 @@ a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
+    text-decoration: underline;
+    font-size: 10px;
 }
 
 a:hover {
@@ -61,6 +63,11 @@ a:hover {
     padding: 0px 5px;
     border-radius: 5px;
     box-shadow: 1px 1px rgba(255, 255, 255, 0.425);
+}
+
+.link-site {
+    font-size: 10px;
+    text-decoration: underline;
 }
 
 section {
@@ -118,8 +125,8 @@ footer {
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
-        <p><a href="https://robisonnunes08.github.io/desafio-projeto-cordel/" target="_blank">Siga para o Site</a></p>
+        <p><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por: Milton Duarte</a></p>
+        <p class="link-site"><a href="https://robisonnunes08.github.io/desafio-projeto-cordel/" target="_blank">Acesse o site</a></p>
     </header>
         <section class="normal">
             <p>
