--- a/portgeral/port005.html
+++ b/portgeral/port005.html
@@ -88,6 +88,12 @@ nav {
     padding: 10px;
 }
 
+a.link {
+    color: white;
+    font-weight: bolder;
+    margin-top: 40px;
+}
+
 nav > a {
     border-radius: 5px;
     transition-duration: 0.3s;
@@ -237,6 +243,8 @@ footer a:hover {
     <header>
         <h1>CURIOSIDADES DE TECNOLOGIA</h1> 
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
+
+        <p style="padding-top: 40px ;"><a href="https://robisonnunes08.github.io/desafio-site-android/index.html" target="_blank" class="link">Acesse o site</a></p>
     </header>      
       <nav>
         <a href="#">Home</a>
