--- a/portgeral/port002.html
+++ b/portgeral/port002.html
@@ -72,6 +72,8 @@ p {
 
 }
 
+
+
 .img01 {
     display: inline-block;
     width: 92%;
@@ -112,6 +114,12 @@ footer {
 
 }
 
+.site {
+    color: white;
+    padding-left: 60px;
+    font-weight: bolder;
+    font-size: 1.3em;
+}
     </style>
    
 </head>
@@ -124,6 +132,7 @@ footer {
             <li>MÚSICA  de 
                 <a href="https://coletiva.net/artigos/o-maestro-negro-e-as-tres-versoes-do-hino-farroupilha,229107.jhtml" target="_blank">Comendador Maestro Joaquim José de Mendanha</a></li>
         </ul>
+        <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" class="site">Acesse o site</a>
     </header>
     
   <main>
