--- a/portgeral/port002.html
+++ b/portgeral/port002.html
@@ -132,7 +132,7 @@ footer {
             <li>MÚSICA  de 
                 <a href="https://coletiva.net/artigos/o-maestro-negro-e-as-tres-versoes-do-hino-farroupilha,229107.jhtml" target="_blank">Comendador Maestro Joaquim José de Mendanha</a></li>
         </ul>
-        <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" class="site">Acesse o site</a>
+        <a href="https://robisonnunes08.github.io/hino-rio-grande-do-sul/" target="_blank" class="site">Acesse o site</a>
     </header>
     
   <main>
