--- a/portgeral/port001.html
+++ b/portgeral/port001.html
@@ -68,6 +68,16 @@ a:hover {
 .link-site {
     font-size: 10px;
     text-decoration: underline;
+    background-color: gray;
+    padding: 5px ;
+    border-radius: 10px;
+    margin: 3px 50px 12px 50px;
+}
+
+.base {
+    background-color: black;
+    padding: 10px 0px 10px 0px;
+
 }
 
 section {
@@ -127,6 +137,7 @@ footer {
         <h1>Cordel Moderno</h1>
         <p><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por: Milton Duarte</a></p>
         <p class="link-site"><a href="https://robisonnunes08.github.io/desafio-projeto-cordel/" target="_blank">Acesse o site</a></p>
+        <p class="base"></p>
     </header>
         <section class="normal">
             <p>
