--- a/portgeral/port005.html
+++ b/portgeral/port005.html
@@ -92,6 +92,14 @@ a.link {
     color: white;
     font-weight: bolder;
     margin-top: 40px;
+    background-color: #063d1e;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 8px;
+}
+
+.link:hover {
+    background-color:  #031f0f;
 }
 
 nav > a {
@@ -242,9 +250,10 @@ footer a:hover {
 <body>
     <header>
         <h1>CURIOSIDADES DE TECNOLOGIA</h1> 
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p><br>
+        <p></p><br> <br>
 
-        <p style="padding-top: 40px ;"><a href="https://robisonnunes08.github.io/desafio-site-android/index.html" target="_blank" class="link">Acesse o site</a></p>
+        <p><a href="https://robisonnunes08.github.io/desafio-site-android/index.html" target="_blank" class="link">Acesse o site</a></p>
     </header>      
       <nav>
         <a href="#">Home</a>
