--- a/portgeral/port002.html
+++ b/portgeral/port002.html
@@ -119,6 +119,10 @@ footer {
     padding-left: 60px;
     font-weight: bolder;
     font-size: 1.3em;
+    background-color: #084120;
+    padding: 5px 5px 5px 5px;
+    margin: 5px 30px 5px 50px;
+    border-radius: 8px;
 }
     </style>
    
