--- a/portgeral/port003.html
+++ b/portgeral/port003.html
@@ -87,11 +87,20 @@
 
         caption > a {
             font-size: 15px;
+            background-color: #a59072;
             color: black;
             font-family: 'Times New Roman', Times, serif;
             font-weight: bolder;
+            padding: 5px 10px 5px 10px;
+            border-radius: 8px 8px 0px 0px;
 
         }
+        caption > a:hover {
+            background-color: #7c6c55;
+            color: #e6e4e1;
+
+        }
+
 
         .titulo {
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
