--- a/portgeral/port002.html
+++ b/portgeral/port002.html
@@ -114,7 +114,7 @@ section > p {
 
 main { 
     display: block;
-    margin: 0px 0px 0px 0px;
+    margin: 0px -18x 0px 0px;
     background-color: #400300d3;
 }
 
